--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,35 @@
 // Navigation code here
+
+nav {
+  .display-flex-column();
+  justify-content: center;
+  width: 100%;
+  background: @nav-bg;
+  //opacity: 0.75;
+  //position: fixed;
+
+  .company-name {
+    padding: 2rem 0;
+    .display-flex-row();
+
+    h1 {
+      color: @nav-font;
+      font-size: 5rem;
+    }
+  }
+  .nav-links {
+    width: 100%;
+    padding-bottom: 2rem;
+    .display-flex-row();
+    font-size: 2rem;
+    .mobile-width(500px);
+
+    a {
+      text-align: center;
+      color: @nav-font;
+      text-decoration: none;
+      padding-left: 4rem;
+    }
+  }
+  .mobile-width(500px);
+} //nav
